added and styled header to theme of weather serverity

--- a/index.HTML
+++ b/index.HTML
@@ -18,7 +18,11 @@
 </head>
 
 <body>
+    <header id="header-container">
+        <h1>Weather Dashboard <img id="header-icon" src="https://creazilla-store.fra1.digitaloceanspaces.com/cliparts/63069/weather-icon-clipart-md.png"></h1>
+    </header>
 
+    <button type="button" class="btn btn-primary">Search</button>
 
     
     <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
