the text input can now be use in the js file

--- a/index.HTML
+++ b/index.HTML
@@ -22,7 +22,12 @@
         <h1>Weather Dashboard <img id="header-icon" src="https://creazilla-store.fra1.digitaloceanspaces.com/cliparts/63069/weather-icon-clipart-md.png"></h1>
     </header>
 
-    <button type="button" class="btn btn-primary">Search</button>
+    <main class = search-container>
+        <div>
+            <textarea id="userInput" placeholder="Enter a city"></textarea>
+        </div>
+        <button type="button" class="btn search-btn btn-primary" id="search-button">Search</button>
+    </main>
 
     
     <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
