--- a/index.HTML
+++ b/index.HTML
@@ -22,13 +22,58 @@
         <h1>Weather Dashboard <img id="header-icon" src="https://creazilla-store.fra1.digitaloceanspaces.com/cliparts/63069/weather-icon-clipart-md.png"></h1>
     </header>
 
-    <main class = search-container>
-        <div>
-            <textarea id="userInput" placeholder="Enter a city"></textarea>
-        </div>
-        <button type="button" class="btn search-btn btn-primary" id="search-button">Search</button>
+    <main class="grid-container">
+        <section class="item1">
+            <div id='search-container'>
+                <h3>What is the weather in:</h3>
+                <div>
+                    <textarea id="userInput" placeholder="Enter a location"></textarea>
+                </div>
+                <button type="button" class="btn search-btn btn-primary" id="search-button">Search</button>
+            </div>
+            <div id = 'history-container'>
+                <br>
+                <br>
+                <hr>
+                <h4>Revisit city</h4>
+                <button type="button" class="btn history-btn btn-primary" id="history-button-1">Search</button>
+                <br>
+                <button type="button" class="btn history-btn btn-primary" id="history-button-2">Search</button>
+                <br>
+                <button type="button" class="btn history-btn btn-primary" id="history-button-3">Search</button>
+                <br>
+                <button type="button" class="btn history-btn btn-primary" id="history-button-4">Search</button>
+                <br>
+                <button type="button" class="btn history-btn btn-primary" id="history-button-4">Search</button>
+            </div>
+        </section>
+        <section>
+            <div class="item2">
+                <!-- city name -->
+                <h3 id="city-name"></h3>
+                <br>
+                <br>
+                <!-- temp -->
+                <h4 id="current-temp"></h4>
+                <br>
+                <!-- humidity -->
+                <h5 id="current-humidity"></h5>
+                <!-- wind speed -->
+                <h5 id="current-wind-speed"></h5>
+                <!-- uv index -->
+                <h5 id="uv-index"></h5>
+            </div>  
+            <div class="item3">
+                <!-- date -->
+                <h5 id="current-date"></h5>
+                <!-- icon -->
+                <img id="current-weather-icon" src="" id="icon">
+            </div>
+    </section>
+        <section class="item4">
+            <h5 id="forecasted-"></h5>
+        </section>
     </main>
-
     
     <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
