reformated HTML document changed the API to imperial units and got rid of conversion functions

--- a/index.HTML
+++ b/index.HTML
@@ -47,29 +47,27 @@
                 <button type="button" class="btn history-btn btn-primary" id="history-button-4">Search</button>
             </div>
         </section>
-        <section>
-            <div class="item2">
-                <!-- city name -->
-                <h3 id="city-name"></h3>
-                <br>
-                <br>
-                <!-- temp -->
-                <h4 id="current-temp"></h4>
-                <br>
-                <!-- humidity -->
-                <h5 id="current-humidity"></h5>
-                <!-- wind speed -->
-                <h5 id="current-wind-speed"></h5>
-                <!-- uv index -->
-                <h5 id="uv-index"></h5>
-            </div>  
-            <div class="item3">
-                <!-- date -->
-                <h5 id="current-date"></h5>
-                <!-- icon -->
-                <img id="current-weather-icon" src="" id="icon">
-            </div>
-    </section>
+        <section class="item2">
+            <!-- city name -->
+            <h3 id="city-name"></h3>
+            <br>
+            <br>
+            <!-- temp -->
+            <h4 id="current-temp"></h4>
+            <br>
+            <!-- humidity -->
+            <h5 id="current-humidity"></h5>
+            <!-- wind speed -->
+            <h5 id="current-wind-speed"></h5>
+            <!-- uv index -->
+            <h5 id="uv-index"></h5>
+        </section>
+        <section class="item3">
+            <!-- date -->
+            <h5 id="current-date"></h5>
+            <!-- icon -->
+            <img id="current-weather-icon" src="" id="icon">
+        </section>
         <section class="item4">
             <h5 id="forecasted-"></h5>
         </section>
