dates are displaying for five future dates

--- a/index.HTML
+++ b/index.HTML
@@ -33,8 +33,8 @@
             </div>
             <div id = 'history-container'>
                 <br>
-                <br>
                 <hr>
+                <br>
                 <h4>Revisit city</h4>
                 <button type="button" class="btn history-btn btn-primary" id="history-button-1">Search</button>
                 <br>
@@ -68,8 +68,45 @@
             <!-- icon -->
             <img id="current-weather-icon" src="" id="icon">
         </section>
-        <section class="item4">
-            <h5 id="forecasted-"></h5>
+        <section class="item4" id="forecasted-weather">
+            <h5>5-Day outlook</h5>
+            <div id="days-out">
+                <div id ='one-day-out'>
+                    <div id="one-day-out-date"></div>
+                    <div id="one-day-out-icon"></div>
+                    <div id="one-day-out-temp"></div>
+                    <div id="one-day-out-wind"></div>
+                    <div id="one-day-out-humidity"></div>
+                </div>
+                <div id ='two-days-out'>
+                    <div id="two-days-out-date"></div>
+                    <div id="two-days-out-icon"></div>
+                    <div id="two-days-out-temp"></div>
+                    <div id="two-days-out-wind"></div>
+                    <div id="two-days-out-humidity"></div>
+                </div>
+                <div id ='three-day-out'>
+                    <div id="three-days-out-date"></div>
+                    <div id="three-days-out-icon"></div>
+                    <div id="three-days-out-temp"></div>
+                    <div id="three-days-out-wind"></div>
+                    <div id="three-days-out-humidity"></div>
+                </div>
+                <div id ='four-days-out'>
+                    <div id="four-days-out-date"></div>
+                    <div id="four-days-out-icon"></div>
+                    <div id="four-days-out-temp"></div>
+                    <div id="four-days-out-wind"></div>
+                    <div id="four-days-out-humidity"></div>
+                </div>
+                <div id ='five-days-out'>
+                    <div id="five-days-out-date"></div>
+                    <div id="five-days-out-icon"></div>
+                    <div id="five-days-out-temp"></div>
+                    <div id="five-days-out-wind"></div>
+                    <div id="five-days-out-humidity"></div>
+                </div>
+            </div>
         </section>
     </main>
     
