all dates are displaying

--- a/index.HTML
+++ b/index.HTML
@@ -66,21 +66,21 @@
             <!-- date -->
             <h5 id="current-date"></h5>
             <!-- icon -->
-            <img id="current-weather-icon" src="" id="icon">
+            <img id="current-weather-icon" src="">
         </section>
         <section class="item4" id="forecasted-weather">
             <h5>5-Day outlook</h5>
             <div id="days-out">
                 <div id ='one-day-out'>
                     <div id="one-day-out-date"></div>
-                    <div id="one-day-out-icon"></div>
+                    <img src="" id="one-day-out-icon">
                     <div id="one-day-out-temp"></div>
                     <div id="one-day-out-wind"></div>
                     <div id="one-day-out-humidity"></div>
                 </div>
                 <div id ='two-days-out'>
                     <div id="two-days-out-date"></div>
-                    <div id="two-days-out-icon"></div>
+                    <img id="two-days-out-icon"></img>
                     <div id="two-days-out-temp"></div>
                     <div id="two-days-out-wind"></div>
                     <div id="two-days-out-humidity"></div>
