future dates all have icons

--- a/index.HTML
+++ b/index.HTML
@@ -80,28 +80,28 @@
                 </div>
                 <div id ='two-days-out'>
                     <div id="two-days-out-date"></div>
-                    <img id="two-days-out-icon"></img>
+                    <img src="" id="two-days-out-icon">
                     <div id="two-days-out-temp"></div>
                     <div id="two-days-out-wind"></div>
                     <div id="two-days-out-humidity"></div>
                 </div>
                 <div id ='three-day-out'>
                     <div id="three-days-out-date"></div>
-                    <div id="three-days-out-icon"></div>
+                    <img src="" id="three-days-out-icon">
                     <div id="three-days-out-temp"></div>
                     <div id="three-days-out-wind"></div>
                     <div id="three-days-out-humidity"></div>
                 </div>
                 <div id ='four-days-out'>
                     <div id="four-days-out-date"></div>
-                    <div id="four-days-out-icon"></div>
+                    <img src="" id="four-days-out-icon">
                     <div id="four-days-out-temp"></div>
                     <div id="four-days-out-wind"></div>
                     <div id="four-days-out-humidity"></div>
                 </div>
                 <div id ='five-days-out'>
                     <div id="five-days-out-date"></div>
-                    <div id="five-days-out-icon"></div>
+                    <img src="" id="five-days-out-icon">
                     <div id="five-days-out-temp"></div>
                     <div id="five-days-out-wind"></div>
                     <div id="five-days-out-humidity"></div>
