button is populating, and click is changing weather upon click

--- a/index.HTML
+++ b/index.HTML
@@ -36,15 +36,8 @@
                 <hr>
                 <br>
                 <h4>Revisit city</h4>
-                <button type="button" class="btn history-btn btn-primary" id="history-button-1">Search</button>
-                <br>
-                <button type="button" class="btn history-btn btn-primary" id="history-button-2">Search</button>
-                <br>
-                <button type="button" class="btn history-btn btn-primary" id="history-button-3">Search</button>
-                <br>
-                <button type="button" class="btn history-btn btn-primary" id="history-button-4">Search</button>
-                <br>
-                <button type="button" class="btn history-btn btn-primary" id="history-button-4">Search</button>
+                <button type="button" class="btn history-btn btn-primary history-button"></button>
+            
             </div>
         </section>
         <section class="item2">
@@ -71,35 +64,35 @@
         <section class="item4" id="forecasted-weather">
             <h5>5-Day outlook</h5>
             <div id="days-out">
-                <div id ='one-day-out'>
+                <div id ='one-day-out' class="five-day-display">
                     <div id="one-day-out-date"></div>
                     <img src="" id="one-day-out-icon">
                     <div id="one-day-out-temp"></div>
                     <div id="one-day-out-wind"></div>
                     <div id="one-day-out-humidity"></div>
                 </div>
-                <div id ='two-days-out'>
+                <div id ='two-days-out' class="five-day-display">
                     <div id="two-days-out-date"></div>
                     <img src="" id="two-days-out-icon">
                     <div id="two-days-out-temp"></div>
                     <div id="two-days-out-wind"></div>
                     <div id="two-days-out-humidity"></div>
                 </div>
-                <div id ='three-day-out'>
+                <div id ='three-day-out'class="five-day-display">
                     <div id="three-days-out-date"></div>
                     <img src="" id="three-days-out-icon">
                     <div id="three-days-out-temp"></div>
                     <div id="three-days-out-wind"></div>
                     <div id="three-days-out-humidity"></div>
                 </div>
-                <div id ='four-days-out'>
+                <div id ='four-days-out' class="five-day-display">
                     <div id="four-days-out-date"></div>
                     <img src="" id="four-days-out-icon">
                     <div id="four-days-out-temp"></div>
                     <div id="four-days-out-wind"></div>
                     <div id="four-days-out-humidity"></div>
                 </div>
-                <div id ='five-days-out'>
+                <div id ='five-days-out' class="five-day-display">
                     <div id="five-days-out-date"></div>
                     <img src="" id="five-days-out-icon">
                     <div id="five-days-out-temp"></div>
