--- a/index.html
+++ b/index.html
@@ -65,35 +65,35 @@
             <h5>5-Day outlook</h5>
             <div id="days-out">
                 <div id ='one-day-out' class="five-day-display">
-                    <div id="one-day-out-date"></div>
+                    <div id="date-out-1-day"></div>
                     <img src="" id="one-day-out-icon">
                     <div id="one-day-out-temp"></div>
                     <div id="one-day-out-wind"></div>
                     <div id="one-day-out-humidity"></div>
                 </div>
                 <div id ='two-days-out' class="five-day-display">
-                    <div id="two-days-out-date"></div>
+                    <div id="date-out-2-day"></div>
                     <img src="" id="two-days-out-icon">
                     <div id="two-days-out-temp"></div>
                     <div id="two-days-out-wind"></div>
                     <div id="two-days-out-humidity"></div>
                 </div>
                 <div id ='three-day-out'class="five-day-display">
-                    <div id="three-days-out-date"></div>
+                    <div id="date-out-3-day"></div>
                     <img src="" id="three-days-out-icon">
                     <div id="three-days-out-temp"></div>
                     <div id="three-days-out-wind"></div>
                     <div id="three-days-out-humidity"></div>
                 </div>
                 <div id ='four-days-out' class="five-day-display">
-                    <div id="four-days-out-date"></div>
+                    <div id="date-out-4-day"></div>
                     <img src="" id="four-days-out-icon">
                     <div id="four-days-out-temp"></div>
                     <div id="four-days-out-wind"></div>
                     <div id="four-days-out-humidity"></div>
                 </div>
                 <div id ='five-days-out' class="five-day-display">
-                    <div id="five-days-out-date"></div>
+                    <div id="date-out-5-day"></div>
                     <img src="" id="five-days-out-icon">
                     <div id="five-days-out-temp"></div>
                     <div id="five-days-out-wind"></div>
