--- a/index.html
+++ b/index.html
@@ -66,38 +66,38 @@
             <div id="days-out">
                 <div id ='one-day-out' class="five-day-display">
                     <div id="date-out-1-day"></div>
-                    <img src="" id="one-day-out-icon">
-                    <div id="one-day-out-temp"></div>
-                    <div id="one-day-out-wind"></div>
-                    <div id="one-day-out-humidity"></div>
+                    <img src="" id="icon-out-1-day">
+                    <div id="temp-out-1-day"></div>
+                    <div id="wind-speed-out-1-day"></div>
+                    <div id="humidity-out-1-day"></div>
                 </div>
                 <div id ='two-days-out' class="five-day-display">
                     <div id="date-out-2-day"></div>
-                    <img src="" id="two-days-out-icon">
-                    <div id="two-days-out-temp"></div>
-                    <div id="two-days-out-wind"></div>
-                    <div id="two-days-out-humidity"></div>
+                    <img src="" id="icon-out-2-day">
+                    <div id="temp-out-2-day"></div>
+                    <div id="wind-speed-out-2-day"></div>
+                    <div id="humidity-out-2-day"></div>
                 </div>
                 <div id ='three-day-out'class="five-day-display">
                     <div id="date-out-3-day"></div>
-                    <img src="" id="three-days-out-icon">
-                    <div id="three-days-out-temp"></div>
-                    <div id="three-days-out-wind"></div>
-                    <div id="three-days-out-humidity"></div>
+                    <img src="" id="icon-out-3-day">
+                    <div id="temp-out-3-day"></div>
+                    <div id="wind-speed-out-3-day"></div>
+                    <div id="humidity-out-3-day"></div>
                 </div>
                 <div id ='four-days-out' class="five-day-display">
                     <div id="date-out-4-day"></div>
-                    <img src="" id="four-days-out-icon">
-                    <div id="four-days-out-temp"></div>
-                    <div id="four-days-out-wind"></div>
-                    <div id="four-days-out-humidity"></div>
+                    <img src="" id="icon-out-4-day">
+                    <div id="temp-out-4-day"></div>
+                    <div id="wind-speed-out-4-day"></div>
+                    <div id="humidity-out-4-day"></div>
                 </div>
                 <div id ='five-days-out' class="five-day-display">
                     <div id="date-out-5-day"></div>
-                    <img src="" id="five-days-out-icon">
-                    <div id="five-days-out-temp"></div>
-                    <div id="five-days-out-wind"></div>
-                    <div id="five-days-out-humidity"></div>
+                    <img src="" id="icon-out-5-day">
+                    <div id="temp-out-5-day"></div>
+                    <div id="wind-speed-out-5-day"></div>
+                    <div id="humidity-out-5-day"></div>
                 </div>
             </div>
         </section>
