refractored display name to not accept invalid inputs

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <main class="grid-container">
         <section class="item1">
-            <div id='search-container'>
+            <div id="search-container">
                 <h3>What is the weather in:</h3>
                 <div>
                     <textarea id="userInput" placeholder="Enter a location"></textarea>
