buttons are being created and stored in the local storage button name is formatted buttons pull up past city information

--- a/index.html
+++ b/index.html
@@ -27,17 +27,15 @@
             <div id="search-container">
                 <h3>What is the weather in:</h3>
                 <div>
-                    <textarea id="userInput" placeholder="Enter a location"></textarea>
+                    <textarea id="user-input" placeholder="Enter a location"></textarea>
                 </div>
                 <button type="button" class="btn search-btn btn-primary" id="search-button">Search</button>
             </div>
-            <div id = 'history-container'>
+            <div id = "search-history-container">
                 <br>
                 <hr>
                 <br>
                 <h4>Revisit city</h4>
-                
-            
             </div>
         </section>
         <section class="item2">
