added feels like temp

--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
             <!-- temp -->
             <h4 id="current-temp"></h4>
             <br>
+            <!-- feels like temp -->
+            <h5 id="current-feel-like-temp"></h5>
             <!-- humidity -->
             <h5 id="current-humidity"></h5>
             <!-- wind speed -->
