weather section displays after city was search

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </section>
         </div>
 
-        <div id="weather-info-container">
+        <div id="weather-info-container" class="hidden">
             <section id="current-weather-container">
                 <div id="primary-current-weather-info">
                     <!-- city name -->
