--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <section id="new-city-search-container" >
                 <h3>What is the weather in:</h3>
                 <textarea id="user-input" placeholder="Enter city name"></textarea>
-                <button type="button" class="btn search-btn btn-primary" id="search-button">Search</button>
+                <button type="button" class="btn" id="search-button">Search</button>
             </section>
             <hr>
             <section id="search-history-container">
