added clear history btn and styled history section

--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
             </section>
             <hr>
             <section id="search-history-container">
-                <h4>Revisit city</h4>
+                <h4 id="search-history-title">Revisit city</h4>
+                <div id="city-buttons"></div>
+                <h6 id="clear-history">Clear History</h6>
             </section>
         </div>
 
