change the user input to input field

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div id="search-content-container">
             <section id="new-city-search-container" >
                 <h3>What is the weather in:</h3>
-                <textarea id="user-input" placeholder="Enter city name"></textarea>
+                <input id="user-input" placeholder="Enter city name"></input>
                 <button type="button" class="btn" id="search-button">Search</button>
             </section>
             <hr>
