styling to the page updated

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <main id="all-content-container">
         <div id="search-content-container">
             <section id="new-city-search-container" >
-                <h3>What is the weather in:</h3>
+                <h3 id="search-prompt">What is the weather in:</h3>
                 <input id="user-input" placeholder="Enter city name"></input>
                 <button type="button" class="btn" id="search-button">Search</button>
             </section>
