history section does not show if nothing is has been searched uv index styling updated

--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
                 <button type="button" class="btn" id="search-button">Search</button>
             </section>
             <hr>
-            <section id="search-history-container">
-                <h4 id="search-history-title">Revisit city</h4>
+            <section id="search-history-container" >
+                <h4 id="search-history-title" class="hidden">Revisit city</h4>
                 <div id="city-buttons"></div>
-                <h6 id="clear-history">Clear History</h6>
+                <h6 id="clear-history" class="hidden">Clear History</h6>
             </section>
         </div>
 
