styling update and notes for future notes for color scheme idea

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div id="search-content-container">
             <section id="new-city-search-container" >
                 <h3 id="search-prompt">What is the weather in:</h3>
-                <input id="user-input" placeholder="Enter city name"></input>
+                <input id="user-input" onfocus="this.value=''" placeholder="Enter city name"></input>
                 <button type="button" class="btn" id="search-button">Search</button>
             </section>
             <hr>
